--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,8 @@ pymupdf>=1.24.0
 # Optional: For Celery (if chosen later)
 # celery>=5.3.0
 # redis>=5.0.0 # Example broker
+
+# Testing
+pytest>=8.0.0
+httpx>=0.27.0
+pytest-asyncio>=0.23.0
