feat: Set up PostgreSQL, SQLAlchemy models, Alembic, and Docker

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,11 @@ python-dotenv>=1.0.0
 # Database (Async SQLite example)
 aiosqlite>=0.19.0
 
+# ORM and Database
+sqlalchemy[asyncio]>=2.0.0
+alembic>=1.13.0
+asyncpg>=0.29.0 # PostgreSQL async driver
+
 # Vector DB (Chroma example)
 chromadb>=0.4.24
 
@@ -14,10 +19,6 @@ sentence-transformers>=2.6.0
 
 # PDF Processing (Example - PyMuPDF)
 pymupdf>=1.24.0
-
-# Optional: For SQLAlchemy ORM (if chosen later)
-# sqlalchemy[asyncio]>=2.0.0
-# alembic>=1.13.0 # For migrations
 
 # Optional: For Celery (if chosen later)
 # celery>=5.3.0
